--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,31 @@
-<h1>Cats!</h1>
+<h1>Burgers!</h1>
 
 <h2>Burgers that !</h2>
 
 <ul>
-    {{#each cats}}
-    {{#unless sleepy}}
-    {{> cats/cat-block sleep=true}}
+    {{#each burgers}}
+    {{#unless devoured}}
+    <li> {{burger_name}} <button class="devouredBtn"> Devoured </button></li>
     {{/unless}}
     {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2></h2>
 
 <ul>
-    {{#each cats}}
-    {{#if sleepy}}
-    {{> cats/cat-block sleep=false}}
+    {{#each burgers}}
+    {{#if devoured}}
+   <li> {{burger_name}} </li>
     {{/if}}
     {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
-<form class="create-form">
+<h2>Add a Burger</h2>
 
     <div class="form-group">
-        <label for="ca">Cat Name:</label>
-        <input type="text" id="ca" name="name">
+        <label for="ca">Burger Name:</label>
+        <input type="text" id="burgerName" name="name">
     </div>
 
-    <div class="form-group">
-        <label for="sleepy">Sleepy?</label><br>
-        <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-        <input type="radio" name="sleepy" value="0"> Awake
-    </div>
 
-    <button type="submit">Add Cat</button>
-</form>
+    <button class="addBurgerBtn" type="button">Add Burger</button>
