--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Eat-Da-Burger!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/burger.js"></script>
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		<title>Eat-Da-Burger!</title>		
 	</head>
 	<body>
 		{{{ body }}}
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/assets/js/script.js"></script>
 	</body>
 </html>
