--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,5 @@
-<h1>Burgers!</h1>
-
-<h2>Burgers that !</h2>
+<img src="/assets/img/burger.png" alt="burger"/>
+<h1 id="header">Eat-Da-Burger!</h1>
 
 <ul>
     {{#each burgers}}
@@ -15,17 +14,17 @@
 <ul>
     {{#each burgers}}
     {{#if devoured}}
-   <li> {{burger_name}} </li>
+    <li> {{burger_name}} </li>
     {{/if}}
     {{/each}}
 </ul>
 
 <h2>Add a Burger</h2>
 
-    <div class="form-group">
-        <label for="ca">Burger Name:</label>
-        <input type="text" id="burgerName" name="name">
-    </div>
+<div class="form-group">
+    <label for="ca">Burger Name:</label>
+    <input type="text" id="burgerName" name="name">
+</div>
 
 
-    <button class="addBurgerBtn" type="button">Add Burger</button>
+<button class="addBurgerBtn" type="button">Submit</button>
