--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<img id="pic" src="" alt="burger" />
+<img id="pic" src="assets/unnamed.png" alt="burger" />
 <h1 id="header">Eat-Da-Burger!</h1>
 
 <div class="row">
