--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -41,6 +41,8 @@ body {
 }
 
 #pic {
-    margin-left: 37.5%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;  
     height: 250px;
 }
